# enerdata

./: .bumpversion.cfg  .coveragerc  .drone.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: pypi.yml  python2-app.yml  python2.7-app.yml  python3-app.yml  python3.10-app.yml  python3.11-app.yml  python3.6-app.yml  python3.7-app.yml  python3.8-app.yml  python3.9-app.yml  version.yml
enerdata/: __init__.py
enerdata/calendars/: __init__.py
enerdata/contracts/: __init__.py  contract.py  electrical_seasons.py  normalized_power.py  tariff.py
enerdata/cups/: cups.py
enerdata/datetime/: holidays.py  solar_hour.py  station.py  timezone.py  work_and_holidays.py
enerdata/losses/: profile.py
enerdata/metering/: measure.py  meter.py
enerdata/profiles/: __init__.py  profile.py  tariff.py
enerdata/profiles/data/: coefficients_HIDRO_RE.csv  coefficients_HIDRO_RE.xlsx  coefficients_RE.xlsx
enerdata/utils/: compress.py  profile.py
spec/calendars/: calendars_spec.py
spec/coefficients/: coefficients_spec.py
spec/contracts/: contract_spec.py  normalized_power_spec.py  tariff_spec.py
spec/cups/: cups_spec.py
spec/datetime/: holidays_spec.py  solar_hour_spec.py  station_spec.py
spec/fixtures/curves/: curve.json
spec/metering/: measure_spec.py  meter_spec.py
spec/profiles/: dragger_spec.py  gaps_spec.py  integration_spec.py  profile_spec.py
